# College_Event_Management_System

./: README.md  app.py  pyproject.toml  user_data.py
instance/: college_events.db
static/css/: style.css
static/js/: app.js
templates/: admin_dashboard.html  admin_email_settings.html  admin_halls.html  admin_users.html  create_event.html  event_detail.html  event_list.html  faculty_bookings.html  faculty_dashboard.html  index.html  layout.html  login.html  my_bookings.html  organizer_bookings.html  organizer_dashboard.html  profile.html  register.html
